--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -6,5 +6,6 @@
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </head>
   <body>
+    <div id="nc-root"></div> <!-- Ensure this exists -->
   </body>
 </html>
