changed base url

--- a/public/about/index-zh/index.html
+++ b/public/about/index-zh/index.html
@@ -24,7 +24,7 @@
 <meta property="og:site_name" content="Tella" />
 <meta property="og:title" content=" | Tella" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://example.com/about/index-zh/" />
+<meta property="og:url" content="https://wondrous-llama-f95062.netlify.app/about/index-zh/" />
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:title" content="">
 
@@ -650,7 +650,7 @@ Hi，我是赵化冰，服务网格技术布道者及实践者，腾讯云工程
     </div>
     <nav class="flex items-center justify-between flex-wrap bg-opacity-100 p-8">
         <div class="flex items-center flex-shrink-0 text-xl text-grey-900 mr-6">
-            <a href="https://example.com/"><img alt="Tella Logo"
+            <a href="https://wondrous-llama-f95062.netlify.app/"><img alt="Tella Logo"
                     class="h-14 mr-3" src="/img/logo/logo.svg"></a>
         </div>
         <div class="block lg:hidden">
