--- a/public/about/index.html
+++ b/public/about/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head><meta charset="utf-8">
-<title>Tella | About Hugo</title>
+<title>Tella | About</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link rel="apple-touch-icon" sizes="180x180" href='/apple-touch-icon.png'>
 <link rel="icon" type="image/png" sizes="32x32" href='/favicon-32x32.png'>
@@ -22,69 +22,18 @@
 
 
 <meta property="og:site_name" content="Tella" />
-<meta property="og:title" content="About Hugo | Tella" />
+<meta property="og:title" content="About | Tella" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://example.com/about/" />
+<meta property="og:url" content="https://wondrous-llama-f95062.netlify.app/about/" />
 <meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:title" content="About Hugo">
+<meta property="twitter:title" content="About">
 
 
 <meta property="og:image" content="https://raw.githubusercontent.com/opera7133/tella/master/images/tn.png">
 
-<meta name="description" content="Hugo is a static site engine written in Go.
-It makes use of a variety of open source projects including:
-
-Cobra
-Viper
-J Walter Weatherman
-Cast
-
-Learn more and contribute on GitHub.
-Setup
-Some fun facts about Hugo:
-
-Built in Go
-Loosely inspired by Jekyll
-Primarily developed by spf13 on the train while commuting to and from Manhattan.
-Coded in Vim using spf13-vim
-
-Have questions or suggestions? Feel free to open an issue on GitHub or ask me on Twitter." />
-<meta property="og:description" content="Hugo is a static site engine written in Go.
-It makes use of a variety of open source projects including:
-
-Cobra
-Viper
-J Walter Weatherman
-Cast
-
-Learn more and contribute on GitHub.
-Setup
-Some fun facts about Hugo:
-
-Built in Go
-Loosely inspired by Jekyll
-Primarily developed by spf13 on the train while commuting to and from Manhattan.
-Coded in Vim using spf13-vim
-
-Have questions or suggestions? Feel free to open an issue on GitHub or ask me on Twitter." />
-<meta property="twitter:description" content="Hugo is a static site engine written in Go.
-It makes use of a variety of open source projects including:
-
-Cobra
-Viper
-J Walter Weatherman
-Cast
-
-Learn more and contribute on GitHub.
-Setup
-Some fun facts about Hugo:
-
-Built in Go
-Loosely inspired by Jekyll
-Primarily developed by spf13 on the train while commuting to and from Manhattan.
-Coded in Vim using spf13-vim
-
-Have questions or suggestions? Feel free to open an issue on GitHub or ask me on Twitter." />
+<meta name="description" content="Hugo, the world&#39;s fastest framework for building websites" />
+<meta property="og:description" content="Hugo, the world&#39;s fastest framework for building websites" />
+<meta property="twitter:description" content="Hugo, the world&#39;s fastest framework for building websites" />
 
 
 </head>
@@ -122,7 +71,7 @@ Have questions or suggestions? Feel free to open an issue on GitHub or ask me on
     </div>
     <nav class="flex items-center justify-between flex-wrap bg-opacity-100 p-8">
         <div class="flex items-center flex-shrink-0 text-xl text-grey-900 mr-6">
-            <a href="https://example.com/"><img alt="Tella Logo"
+            <a href="https://wondrous-llama-f95062.netlify.app/"><img alt="Tella Logo"
                     class="h-14 mr-3" src="/img/logo/logo.svg"></a>
         </div>
         <div class="block lg:hidden">
@@ -165,32 +114,22 @@ Have questions or suggestions? Feel free to open an issue on GitHub or ask me on
     </div>
 <div class="mx-auto my-10 max-w-6xl">
   <div class="mx-3 col-span-3 lg:col-span-2 px-2">
-    <h1 class="title text-5xl mb-4">About Hugo</h1>
-    <div class="content py-1"><p>Hugo is a static site engine written in Go.</p>
-<p>It makes use of a variety of open source projects including:</p>
+    <h1 class="title text-5xl mb-4">About</h1>
+    <div class="content prose md:prose-lg lg:prose-xl max-w-none py-1"><p>Written in Go, Hugo is an open source static site generator available under the <a href="https://github.com/gohugoio/hugo/blob/master/LICENSE">Apache Licence 2.0.</a> Hugo supports TOML, YAML and JSON data file types, Markdown and HTML content files and uses shortcodes to add rich content. Other notable features are taxonomies, multilingual mode, image processing, custom output formats, HTML/CSS/JS minification and support for Sass SCSS workflows.</p>
+<p>Hugo makes use of a variety of open source projects including:</p>
 <ul>
-<li><a href="https://github.com/spf13/cobra">Cobra</a></li>
-<li><a href="https://github.com/spf13/viper">Viper</a></li>
-<li><a href="https://github.com/spf13/jWalterWeatherman">J Walter Weatherman</a></li>
-<li><a href="https://github.com/spf13/cast">Cast</a></li>
+<li><a href="https://github.com/yuin/goldmark">https://github.com/yuin/goldmark</a></li>
+<li><a href="https://github.com/alecthomas/chroma">https://github.com/alecthomas/chroma</a></li>
+<li><a href="https://github.com/muesli/smartcrop">https://github.com/muesli/smartcrop</a></li>
+<li><a href="https://github.com/spf13/cobra">https://github.com/spf13/cobra</a></li>
+<li><a href="https://github.com/spf13/viper">https://github.com/spf13/viper</a></li>
 </ul>
-<p>Learn more and contribute on <a href="https://github.com/spf13">GitHub</a>.</p>
-<h2 id="setup">Setup</h2>
-<p>Some fun facts about <a href="http://gohugo.io/">Hugo</a>:</p>
-<ul>
-<li>Built in <a href="http://golang.org/">Go</a></li>
-<li>Loosely inspired by <a href="http://jekyllrb.com/">Jekyll</a></li>
-<li>Primarily developed by <a href="http://spf13.com/">spf13</a> on the train while commuting to and from Manhattan.</li>
-<li>Coded in <a href="http://vim.org">Vim</a> using <a href="http://vim.spf13.com/">spf13-vim</a></li>
-</ul>
-<p>Have questions or suggestions? Feel free to <a href="https://github.com/spf13/hugo/issues/new">open an issue on GitHub</a> or <a href="https://twitter.com/spf13">ask me on Twitter</a>.</p>
-<p>Thanks for reading!</p>
+<p>Hugo is ideal for blogs, corporate websites, creative portfolios, online magazines, single page applications or even a website with thousands of pages.</p>
+<p>Hugo is for people who want to hand code their own website without worrying about setting up complicated runtimes, dependencies and databases.</p>
+<p>Websites built with Hugo are extremely fast, secure and can be deployed anywhere including, AWS, GitHub Pages, Heroku, Netlify and any other hosting provider.</p>
+<p>Learn more and contribute on <a href="https://github.com/gohugoio">GitHub</a>.</p>
 </div>
-    
-    
   </div>
-  
-
 </div>
 
   </main><footer class="bg-tlgray-100">
