--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
     </div>
     <nav class="flex items-center justify-between flex-wrap bg-opacity-100 p-8">
         <div class="flex items-center flex-shrink-0 text-xl text-grey-900 mr-6">
-            <a href="https://example.com/"><img alt="Tella Logo"
+            <a href="https://wondrous-llama-f95062.netlify.app/"><img alt="Tella Logo"
                     class="h-14 mr-3" src="/img/logo/logo.svg"></a>
         </div>
         <div class="block lg:hidden">
@@ -177,7 +177,7 @@
 
     <div class="mx-auto my-10 max-w-6xl">
         <h2 class="text-4xl ml-2">Blog</h2>
-<a href="https://example.com/blog/markdown-syntax/"><div
+<a href="https://wondrous-llama-f95062.netlify.app/blog/markdown-syntax/"><div
   class="sans w-full px-2 lg:max-w-full lg:flex mt-3 lg:px-0 duration-500 transform hover:-translate-y-1 hover:shadow-md">
   
   <img id="thumb" alt="Markdown Syntax Guide" class="aspect-video object-cover w-auto lg:h-44"
@@ -193,7 +193,7 @@
   </div>
 </div></a>
 
-<a href="https://example.com/blog/rich-content/"><div
+<a href="https://wondrous-llama-f95062.netlify.app/blog/rich-content/"><div
   class="sans w-full px-2 lg:max-w-full lg:flex mt-3 lg:px-0 duration-500 transform hover:-translate-y-1 hover:shadow-md">
   
   <img id="thumb" alt="Rich Content" class="aspect-video object-cover w-auto lg:h-44"
@@ -209,7 +209,7 @@
   </div>
 </div></a>
 
-<a href="https://example.com/blog/placeholder-text/"><div
+<a href="https://wondrous-llama-f95062.netlify.app/blog/placeholder-text/"><div
   class="sans w-full px-2 lg:max-w-full lg:flex mt-3 lg:px-0 duration-500 transform hover:-translate-y-1 hover:shadow-md">
   
   <img id="thumb" alt="Placeholder Text" class="aspect-video object-cover w-auto lg:h-44"
