--- a/public/products/example/index.html
+++ b/public/products/example/index.html
@@ -24,7 +24,7 @@
 <meta property="og:site_name" content="Tella" />
 <meta property="og:title" content="Example Project | Tella" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://example.com/products/example/" />
+<meta property="og:url" content="https://wondrous-llama-f95062.netlify.app/products/example/" />
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:title" content="Example Project">
 
@@ -71,7 +71,7 @@
     </div>
     <nav class="flex items-center justify-between flex-wrap bg-opacity-100 p-8">
         <div class="flex items-center flex-shrink-0 text-xl text-grey-900 mr-6">
-            <a href="https://example.com/"><img alt="Tella Logo"
+            <a href="https://wondrous-llama-f95062.netlify.app/"><img alt="Tella Logo"
                     class="h-14 mr-3" src="/img/logo/logo.svg"></a>
         </div>
         <div class="block lg:hidden">
