--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -86,7 +86,9 @@ Contact us now to learn more, start your pilot today, become a partner!
       <nav class="navbar navbar-expand-lg navbar-light fixed-top p-0">
         <div class="container">
 
-          <a class="navbar-brand fw-bold" href="http://localhost:1313/">Circlelytics</a>
+          <a class="navbar-brand fw-bold" href="http://localhost:1313/">
+            <img src="/img/logo.svg" alt="Circlelytics" style="height: 40px;">
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
