--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -308,7 +308,7 @@ Contact us now to learn more, start your pilot today, become a partner!
                     
 
                     <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true"
-                        netlify-honeypot="bot-field" action="/success.html" onsubmit="disableButton(this)">
+                        netlify-honeypot="bot-field" action="/success.html" onsubmit="disableButton(this)" netlify>
 
                         <input type="hidden" name="form-name" value="contact">
 
