--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -307,7 +307,13 @@ Contact us now to learn more, start your pilot today, become a partner!
 
                     
 
-                    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/.netlify/functions/submission-created" onsubmit="disableButton(this)" netlify>
+                    <form
+                    name="contact"
+                    method="POST"
+                    action="/.netlify/functions/submission-created" 
+                    data-netlify="true"
+                    netlify-honeypot="bot-field"
+                    onsubmit="disableButton(this)">
 
                         <input type="hidden" name="form-name" value="contact">
 
