added contact form

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -310,7 +310,7 @@ Contact us now to learn more, start your pilot today, become a partner!
                     <form
                     name="contact"
                     method="POST"
-                    action="/.netlify/functions/submission-created" 
+                    action="contact" 
                     data-netlify="true"
                     netlify-honeypot="bot-field"
                     onsubmit="disableButton(this)">
