added contact form

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -315,7 +315,7 @@ Contact us now to learn more, start your pilot today, become a partner!
                     netlify-honeypot="bot-field"
                     onsubmit="disableButton(this)">
 
-                        <input type="hidden" name="form-name" value="contact">
+                        <input type="hidden" name="form-name" value="/success.html">
 
                         
                         <p hidden>
