added contact form

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -310,12 +310,12 @@ Contact us now to learn more, start your pilot today, become a partner!
                     <form
                     name="contact"
                     method="POST"
-                    action="contact" 
+                    action="success" 
                     data-netlify="true"
                     netlify-honeypot="bot-field"
                     onsubmit="disableButton(this)">
 
-                        <input type="hidden" name="form-name" value="/success.html">
+                        <input type="hidden" name="form-name" value="contact">
 
                         
                         <p hidden>
